# webapi/docs/swagger.yaml
@@ -31,6 +31,21 @@ definitions:
     - new_password
     - password
     type: object
+  form_req.CourseInfoReq:
+    properties:
+      class:
+        description: 班级
+        type: integer
+      grade:
+        description: 年级
+        type: integer
+      search:
+        description: 根据课程名称搜索
+        type: string
+    required:
+    - class
+    - grade
+    type: object
   form_req.CreateCourseReq:
     properties:
       class:
@@ -66,6 +81,9 @@ definitions:
       course_id:
         description: 课程id
         type: integer
+      title:
+        description: 课程标题
+        type: string
     required:
     - course_id
     type: object
@@ -338,6 +356,24 @@ definitions:
       image:
         description: 验证码图片数据
         type: string
+    type: object
+  form_resp.CourseInfoItem:
+    properties:
+      course_id:
+        description: 课程ID
+        type: integer
+      course_name:
+        description: 课程名称
+        type: string
+    type: object
+  form_resp.CourseInfoResp:
+    properties:
+      count:
+        type: integer
+      results:
+        items:
+          $ref: '#/definitions/form_resp.CourseInfoItem'
+        type: array
     type: object
   form_resp.CourseListItem:
     properties:
@@ -789,6 +825,30 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 学生加入课程
+      tags:
+      - course
+  /v1/course/info:
+    get:
+      consumes:
+      - application/x-www-form-urlencoded
+      description: course info
+      parameters:
+      - description: request data
+        in: body
+        name: auth
+        required: true
+        schema:
+          $ref: '#/definitions/form_req.CourseInfoReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: response data
+          schema:
+            $ref: '#/definitions/form_resp.CourseInfoResp'
+      security:
+      - ApiKeyAuth: []
+      summary: 根据班级获取课程信息
       tags:
       - course
   /v1/course/update/:
